force-app/main/default/objects/HAM_Receipt_Line_Item__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <description>The monetary amount associated with this record.</description>
    <inlineHelpText>Enter the amount for this line item or transaction. This value may be used to calculate the Total Amount on the parent record.</inlineHelpText>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>