force-app/main/default/objects/HAM_Receipt_Line_Item__c/fields/HAM_Amount_Paid_to_Date__c.field-meta.xml
<CustomField>
    <fullName>HAM_Amount_Paid_to_Date__c</fullName>
    <description>The total monetary amount paid to date for this record.</description>
    <inlineHelpText>Enter the amount that has been paid so far. This value may be used to calculate totals on the parent record and excludes any pending or future payments.</inlineHelpText>
    <label>Amount Paid to Date</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>