force-app/main/default/objects/HAM_Receipt_Line_Item__c/fields/HAM_Designation__c.field-meta.xml
<CustomField>
    <fullName>HAM_Designation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Identifies the designation associated with this record, automatically populated from the related Credit record.</description>
    <inlineHelpText>This field is auto-populated based on the associated Credit record and should not be edited manually. It reflects the designation to which the credited amount is applied and is used for reporting and receipt generation.</inlineHelpText>
    <label>HAM Designation</label>
    <referenceTo>ucinn_ascendv2__Designation__c</referenceTo>
    <relationshipLabel>Receipt Line Items</relationshipLabel>
    <relationshipName>Receipt_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>