force-app/main/default/objects/HAM_Receipt_Line_Item__c/fields/HAM_Designation_Detail__c.field-meta.xml
<CustomField>
    <fullName>HAM_Designation_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Designation Detail</label>
    <referenceTo>ucinn_ascendv2__Designation_Detail__c</referenceTo>
    <relationshipLabel>Receipt Line Items</relationshipLabel>
    <relationshipName>Receipt_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>