force-app/main/default/objects/HAM_Receipt_Line_Item__c/fields/HAM_Designation_name__c.field-meta.xml
<CustomField>
    <fullName>HAM_Designation_name__c</fullName>
    <formula>HAM_Designation__r.ucinn_ascendv2__Designation_Name__c</formula>
    <label>Designation name</label>
    <type>Text</type>
</CustomField>