force-app/main/default/objects/HAM_Receipt_Line_Item__c/fields/HAM_Gift_Pledge__c.field-meta.xml
<CustomField>
    <fullName>HAM_Gift_Pledge__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links this receipt to the related Gift or Pledge Opportunity record.</description>
    <inlineHelpText>Select the Opportunity representing the gift or pledge for which this receipt is being issued. This association ensures accurate attribution, reporting, and receipt documentation.</inlineHelpText>
    <label>Gift / Pledge</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Receipt Line Items</relationshipLabel>
    <relationshipName>Receipt_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>