force-app/main/default/objects/HAM_Receipt_Line_Item__c/fields/HAM_Hard_and_Soft_Credit__c.field-meta.xml
<CustomField>
    <fullName>HAM_Hard_and_Soft_Credit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links this record to the associated Hard or Soft Credit record for attribution purposes.</description>
    <inlineHelpText>Select the related Hard and Soft Credit record to associate credit attribution with this transaction or receipt. This relationship supports donor recognition, reporting, and credit allocation tracking.</inlineHelpText>
    <label>Hard and Soft Credit</label>
    <referenceTo>ucinn_ascendv2__Hard_and_Soft_Credit__c</referenceTo>
    <relationshipLabel>Receipt Line Items</relationshipLabel>
    <relationshipName>Receipt_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>