force-app/main/default/objects/HAM_Receipt_Line_Item__c/fields/HAM_Pledge_Credit_Date__c.field-meta.xml
<CustomField>
    <fullName>HAM_Pledge_Credit_Date__c</fullName>
    <formula>HAM_Gift_Pledge__r.ucinn_ascendv2__Credit_Date__c</formula>
    <label>Pledge Credit Date</label>
    <type>Date</type>
</CustomField>