force-app/main/default/objects/HAM_Receipt_Line_Item__c/fields/HAM_Receipt__c.field-meta.xml
<CustomField>
    <fullName>HAM_Receipt__c</fullName>
    <description>Links this record to the associated HAM Receipt record.</description>
    <inlineHelpText>Select the related HAM Receipt to associate this record with a specific receipt. This relationship is used for tracking, reporting, and receipt processing purposes.</inlineHelpText>
    <label>HAM Receipt</label>
    <referenceTo>Receipt__c</referenceTo>
    <relationshipLabel>Receipt Line Items</relationshipLabel>
    <relationshipName>Receipt_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>