force-app/main/default/objects/HAM_Receipt_Line_Item__c/fields/Remaining_Amount_due__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Amount_due__c</fullName>
    <description>The outstanding monetary amount that remains unpaid for this record.</description>
    <inlineHelpText>Enter or view the remaining balance due after subtracting payments made to date. This value may be used to calculate totals on the parent record.</inlineHelpText>
    <label>Remaining Amount due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>