force-app/main/default/objects/HAM_Receipt_Line_Item__c/fields/text__c.field-meta.xml
<CustomField>
    <fullName>text__c</fullName>
    <formula>HAM_Designation__r.ucinn_ascendv2__Designation_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>text</label>
    <type>Text</type>
</CustomField>